= 2.0.0.102 =
* Avada page builder don't render header on GD Archive pages - FIXED
* %%term_title%% is not working in Yoast SEO meta title for tags - FIXED
* GD Categories current post type filter is not working on search page - FIXED
* GD Details sidebar not working with Astra theme custom template - FIXED

= 2.0.0.101 =
* Elementor dynamic tag style is not working with Elementor v3 - FIXED

= 2.0.0.100 =
* Scroll to sticky map jumps the page - FIXED
* Allow %%category%% & %%in_category%% on search page meta titles - CHANGED
* Set viewport width & height in mshots screenshot generator for images - CHANGED
* Resize marker does not supports .svg images - FIXED
* Update to Elementor 3.x broken the site - FIXED

= 2.0.0.99 =
* Hide frontpage & blog page from select GD pages dropdown list - CHANGED
* WordPress v5.5 compatibility changes - CHANGED
* Yoast SEO 14+ renders single listing as a noindex if all pages set to noindex - FIXED
* Clear LeafLet deprecated warnings - CHANGED

= 2.0.0.98 =
* OpenStreetMap don't populates region for Bermuda - FIXED
* GD Listings filter posts by current category/tag - ADDED
* Unable to select exact time in timepicker on touch screen device - FIXED
* Publish post email not sent to user after publishing scheduled post - FIXED
* The7 theme shows wrong content on empty search results page - FIXED
* Add listing unable to tick radio buttons on RTL language due to BuddyBoss conflicts - FIXED
* Limit max. number of CPT posts per user - ADDED
* Leaflet map JavaScript library updated to 1.6.0 - CHANGED

= 2.0.0.97 =
* Adjust timezone for listings saved with different offset for same timezone - FIXED
* Allow to setup separate add listing page for each CPT - ADDED
* Rank Math breadcrumb shows multiple categories on detail page - FIXED
* Review reply/cancel reply links are not working on touch screen devices - FIXED
* Some themes don't load comment reply JS on GD single page - FIXED
* Featured image field not updated on delete all images - FIXED